--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -12,7 +12,7 @@
     content: "";
     display: block;
     position: absolute;
-    background-image: linear-gradient(to bottom, rgba(6, 18 , 30 , 0.1), #06121e) , url("../assets/bg.jpg");
+    background-image: linear-gradient(to bottom, rgba(6, 18 , 30 , 0.1), #06121e) , url("../assets/bg.png");
     left: 0;
     top: 0;
     width: 100%;
