--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ i {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: -1;
   background-size: cover;
   background-repeat: no-repeat;
@@ -239,6 +239,7 @@ i {
   border-radius: 8px;
   box-shadow: 0px -1px 17px -4px rgba(0, 0, 0, 0.45);
   overflow: hidden;
+  
 }
 .nail-style img {
   width: 100%;
@@ -258,6 +259,8 @@ i {
   padding: 14px;
   background-color: #ffffff;
   z-index: 99;
+  gap: 15px;
+  
 }
 
 .nail-info button {
@@ -267,6 +270,7 @@ i {
   border-radius: 4px;
   border: 0;
   cursor: default;
+  
 }
 
 @media screen and (max-width: 768px) {
