--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -12,7 +12,7 @@
     content: "";
     display: block;
     position: absolute;
-    background-image: linear-gradient(to bottom, rgba(6, 18 , 30 , 0.1), #06121e) , url("../assets/bg.png");
+    background-image: linear-gradient(to bottom, rgba(225, 66, 106, 0.438), #06121e) , url("../assets/bg.jpg");
     left: 0;
     top: 0;
     width: 100%;
@@ -57,7 +57,7 @@
 .button-contact{
     padding: 14px 28px;
     color: $white-normal;
-    background-color: $red-normal;
+    background-color: $red-light;
     border: 0;
     font-size: 18px;
     font-weight: 600;
@@ -107,6 +107,7 @@
     background-color: $primary-normal;
     overflow: hidden;
     color: $white-normal;
+    text-align: center;
 }
 
 
@@ -114,11 +115,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 14px;
+    gap: 20px;
     padding: 34px 14px 64px 14px;
 
     img{
-        max-width: 570px;
+        max-width: 540px;
     }
 }
 
@@ -126,14 +127,16 @@
     flex: 1;
 }
 
-.about-descripti{
+.about-description{
     h2{
-        font-size: 38px;
+        font-size: 29px;
         margin-bottom: 24px;
+        
     }
     p{
         margin-bottom: 14px;
         line-height: 150%;
+        padding: 15px 15px;
         }
 }
 
@@ -144,8 +147,8 @@
 }
 
 .services{
-    background-color: $white-normal;
-    color: $black-normal;
+    background-color: $primary-normal;
+    color: $white-normal;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -168,62 +171,8 @@
     max-width: 780px;
 }
 
-.nail-designer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    padding: 0 44px 34px 44px;
-}
 
-.nail-style {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    background-color: $white-normal;
-    border-radius: 8px;
-    box-shadow: 0px -1px 17px -4px rgba(0,0,0, 0.45);
-    overflow: hidden;
 
-    img{
-        width: 100%;
-        max-width: 354px;
-        transition: transform 0.2s;
-    }
-}
-
-.nail-style img:hover{
-    transform: scale(1.2);
-    z-index: 1;
-}
-
-.nail-info{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 14px;
-    background-color: $white-normal;
-    z-index: 99;
-}
-
-.nail-info button{
-    color: $white-normal;
-    background-color: $red-normal;
-    padding: 4px 8px;
-    border-radius: 4px;
-    border: 0;
-    cursor: default;
-}
-
-@media screen and (max-width: 768px){
-    .nail-designer{
-        flex-direction: column;
-    }
-}
-
-.nail-style img{
-    max-width: 740px;
-}
 
 .footer{
     display: flex;
