--- a/style.css
+++ b/style.css
@@ -15,18 +15,22 @@ header {
   justify-content: space-between;
 }
 
+.fa-2x {
+  font-size: 3rem;
+}
+
 i {
   color: #ffffff;
+  margin-left: 20px;
 }
 
 .header-icons {
   display: flex;
-  gap: 14px;
 }
 
 .header-icons a:hover i {
   animation: translateY 0.8s infinite alternate;
-  color: #ffa8d9;
+  color: #e14269;
 }
 
 @keyframes translateY {
@@ -44,18 +48,26 @@ i {
   color: #ffffff;
   background-color: transparent;
   transition: background-color 0.8s;
+  margin-right: 20px;
 }
 
 .header-button:hover {
-  border: 1px solid #ffa8d9;
-  background-color: #ffa8d9;
+  border: 1px solid #e14269;
+  background-color: #e14269;
 }
 
 .header-logo {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 60px;
+  margin-top: 20px;
+  width: 190px;
+  margin-left: 135px;
+}
+
+.logo-footer {
+  width: 120px;
+  margin-left: 20px;
 }
 
 @media screen and (max-width: 768px) {
@@ -66,12 +78,18 @@ i {
     justify-content: center;
   }
   .header-content i {
-    margin-top: 16px;
-    font-size: 34px;
+    margin-top: 25px;
+    font-size: 50px;
   }
   .header-logo img {
-    width: 160px;
-    margin-top: 40px;
+    width: 250px;
+    margin-top: 10px;
+  }
+  .header-logo {
+    margin-left: 0;
+    justify-content: center;
+    display: flex;
+    align-items: center;
   }
   .header-button {
     display: none;
@@ -91,11 +109,11 @@ i {
   content: "";
   display: block;
   position: absolute;
-  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url("./assets/bg.png");
+  background-image: linear-gradient(to bottom, rgba(225, 66, 106, 0.438), #06121e), url("../assets/bg.jpg");
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: -1;
   background-size: cover;
   background-repeat: no-repeat;
@@ -126,7 +144,7 @@ i {
 .button-contact {
   padding: 14px 28px;
   color: #ffffff;
-  background-color: #ff69b4;
+  background-color: #e14269;
   border: 0;
   font-size: 18px;
   font-weight: 600;
@@ -168,30 +186,32 @@ i {
   background-color: #06121E;
   overflow: hidden;
   color: #ffffff;
+  text-align: center;
 }
 
 .about-content {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 14px;
+  gap: 20px;
   padding: 34px 14px 64px 14px;
 }
 .about-content img {
-  max-width: 570px;
+  max-width: 540px;
 }
 
 .about-content div {
   flex: 1;
 }
 
-.about-descripti h2 {
-  font-size: 38px;
+.about-description h2 {
+  font-size: 29px;
   margin-bottom: 24px;
 }
-.about-descripti p {
+.about-description p {
   margin-bottom: 14px;
   line-height: 150%;
+  padding: 15px 15px;
 }
 
 @media screen and (max-width: 768px) {
@@ -200,8 +220,8 @@ i {
   }
 }
 .services {
-  background-color: #ffffff;
-  color: #232224;
+  background-color: #06121E;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -221,65 +241,6 @@ i {
   margin-bottom: 14px;
   text-align: center;
   max-width: 780px;
-}
-
-.nail-designer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  padding: 0 44px 34px 44px;
-}
-
-.nail-style {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  background-color: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0px -1px 17px -4px rgba(0, 0, 0, 0.45);
-  overflow: hidden;
-  
-}
-.nail-style img {
-  width: 100%;
-  max-width: 354px;
-  transition: transform 0.2s;
-}
-
-.nail-style img:hover {
-  transform: scale(1.2);
-  z-index: 1;
-}
-
-.nail-info {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 14px;
-  background-color: #ffffff;
-  z-index: 99;
-  gap: 15px;
-  
-}
-
-.nail-info button {
-  color: #ffffff;
-  background-color: #ff69b4;
-  padding: 4px 8px;
-  border-radius: 4px;
-  border: 0;
-  cursor: default;
-  
-}
-
-@media screen and (max-width: 768px) {
-  .nail-designer {
-    flex-direction: column;
-  }
-}
-.nail-style img {
-  max-width: 740px;
 }
 
 .footer {
